standardisation of h1, h2,h3 & h4 elemnts to be semantically correct and font-size aligned

--- a/css-alex/_mobile.scss
+++ b/css-alex/_mobile.scss
@@ -20,11 +20,12 @@ h1 {
     display: block;
     padding: 14px 0.5em;
     color: $color-six;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
 }
 
 h2 {
     font-size: 1.4em;
+    padding-bottom: 0.5em;
 }
 
 h3 {
