--- a/css-alex/app.css
+++ b/css-alex/app.css
@@ -281,10 +281,11 @@ h1 {
   display: block;
   padding: 14px 0.5em;
   color: #eb5b27;
-  text-transform: uppercase; }
+  /*text-transform: uppercase;*/ }
 
 h2 {
-  font-size: 1.4em; }
+  font-size: 1.4em;
+  padding-bottom: 0.5em; }
 
 h3 {
   font-size: 1.6em;
